Script updated to run the game (old school version)